--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import "../styles/global.css";
+import Hero from "../components/Hero";
 import Layout from "../layouts/Layout.astro";
 
 type Age = number;
@@ -7,24 +7,5 @@ let age: Age = new Date().getFullYear() - 1996;
 ---
 
 <Layout title="Jun's Developer Profile">
-  <main class="bg-light h-screen">
-    <section class="section-container m-auto">
-      <div class="flex">
-        <h1 class="text-6xl font-title font-bold text-right flex-grow-1">
-          I build <span class="bg-dark text-light px-2">APIs</span>
-          <br /> and <br /> Web Applications
-        </h1>
-        <p class="flex-grow-0">
-          Hi, I am Jun Yang, a {age} year old web developer based in Kuala Lumpur,
-          Malaysia.
-          <br />
-          <br />
-          I spend a majority of my time working on backend development, but I also
-          enjoy dabbling in frontend development and design on the side. I find myself
-          drawn to the minimalist design approach and aim to implement this style
-          into my work.
-        </p>
-      </div>
-    </section>
-  </main>
+  <Hero />
 </Layout>
