--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
+import About from "../components/About.astro";
 import Hero from "../components/Hero";
+import Work from "../components/Work.astro";
 import Layout from "../layouts/Layout.astro";
 
 type Age = number;
@@ -7,5 +9,7 @@ let age: Age = new Date().getFullYear() - 1996;
 ---
 
 <Layout title="Jun's Developer Profile">
-  <Hero />
+  <Hero client:idle />
+  <About />
+  <Work />
 </Layout>
