--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -1,10 +1,10 @@
 ---
 ---
 
-<footer class="bg-dark text-light py-12 px-20">
-  <div class="flex gap-20">
-    <h3 class="text-2xl font-title inline">GET IN TOUCH</h3>
-    <ul class="inline">
+<footer class="bg-dark text-light py-12">
+  <div class="section-container m-auto flex gap-x-20 gap-y-6 flex-wrap">
+    <h3 class="text-2xl font-title">GET IN TOUCH</h3>
+    <ul class="">
       <li>
         <a href="mailto:junyang.chin@outlook.com" target="_blank"
           >junyang.chin@outlook.com</a
