--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,7 +29,9 @@ const { title } = Astro.props;
     />
   </head>
   <body class="text-text">
-    <slot />
+    <main class="bg-light w-full">
+      <slot />
+    </main>
     <Footer />
   </body>
 </html>
