--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -14,7 +14,7 @@
         class="shadow-imgShadowDark"
       />
     </div>
-    <div class="w-1/2">
+    <div class="w-72">
       <p>
         I transitioned to software engineering after working in the industrial
         automation industry for several years as a mechanical engineering
