--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
 import Footer from "./Footer.astro";
+import Nav from "./Nav.astro";
 export interface Props {
   title: string;
 }
